--- a/resources/translation/english.xml
+++ b/resources/translation/english.xml
@@ -1,40 +1,32 @@
 <names>
   <menu>
     <button href="#">
+      Home
     </button>
     <button href="#app">
+      App
     </button>
     <button href="#modules">
+      Modules
     </button>
   </menu>
   <language>
-    <english>
+    <button href="#english">
       English
-    </english>
-    <spanish>
+    </button>
+    <button href="#spanish">
       Spanish
-    </spanish>
-    <german>
+    </button>
+    <button href="#german">
       German
-    </german>
-    <korean>
+    </button>
+    <button href="#korean">
       Korean
-    </korean>
-    <chinese>
+    </button>
+    <button href="#chinese">
       Chinese
-    </chinese>
+    </button>
   </language>
-  <menu>
-    <home>
-      Home
-    </home>
-    <app>
-      App
-    </app>
-    <modules>
-      Modules
-    </modules>
-  </menu>
   <title>
     Sounds of Speech
   </title>
@@ -44,14 +36,18 @@
     This is some english text
   </content>
   <modules>
-    <english>
-    </english>
-    <spanish>
-    </spanish>
-    <german>
-    </german>
-    <anatomy>
-    </anatomy>
+    <button>
+      English Module
+    </button>
+    <button>
+      Spanish Module
+    </button>
+    <button>
+      German Module
+    </button>
+    <button>
+      Anatomy Module
+    </button>
   </modules>
   <footer>
     &#x24B8; 2017 The University of Iowa
