--- a/resources/translation/german.xml
+++ b/resources/translation/german.xml
@@ -1,4 +1,32 @@
-<document>
+<names>
+  <menu>
+    <button href="#">
+      Startseite
+    </button>
+    <button href="#app">
+      App
+    </button>
+    <button href="#modules">
+      Module
+    </button>
+  </menu>
+  <language>
+    <button href="#english">
+      Englisch
+    </button>
+    <button href="#spanish">
+      Spanisch
+    </button>
+    <button href="#german">
+      Deutsche
+    </button>
+    <button href="#korean">
+      Koreanisch
+    </button>
+    <button href="#chinese">
+      Chinesisch
+    </button>
+  </language>
   <title>
     Die Laute des Deutschen
   </title>
@@ -7,4 +35,21 @@
     This is some german text
     This is some german text
   </content>
-</document>
+  <modules>
+    <button>
+      Englisches Modul
+    </button>
+    <button>
+      Spanisches Modul
+    </button>
+    <button>
+      Deutsches Modul
+    </button>
+    <button>
+      Anatomie-Modul
+    </button>
+  </modules>
+  <footer>
+    &#x24B8; 2017 The University of Iowa
+  </footer>
+</names>
