--- a/resources/translation/spanish.xml
+++ b/resources/translation/spanish.xml
@@ -1,10 +1,55 @@
-<document>
+<names>
+  <menu>
+    <button href="#">
+      Inicio
+    </button>
+    <button href="#app">
+      App
+    </button>
+    <button href="#modules">
+      Módulos
+    </button>
+  </menu>
+  <language>
+    <button href="#english">
+      Inglés
+    </button>
+    <button href="#spanish">
+      Español
+    </button>
+    <button href="#german">
+      Alemán
+    </button>
+    <button href="#korean">
+      Coreano
+    </button>
+    <button href="#chinese">
+      Chino
+    </button>
+  </language>
   <title>
-    Los Sonidos del Espanol
+    Los Sonidos del Español
   </title>
   <content>
     This is some spanish text
     This is some spanish text
     This is some spanish text
   </content>
-</document>
+  <modules>
+    <button>
+      Módulo en Inglés
+    </button>
+    <button>
+      Módulo en Español
+    </button>
+    <button>
+      Módulo en Alemán
+    </button>
+    <button>
+      Módulo de Anatomía
+    </button>
+  </modules>
+  <footer>
+    &#x24B8; 2017 The University of Iowa
+  </footer>
+</names>
