--- a/resources/translation/spanish.xml
+++ b/resources/translation/spanish.xml
@@ -1,8 +1,8 @@
 <names>
   <menu>
-    <button>Inicio</button>
-    <button>App</button>
-    <button>Módulos</button>
+    <button>About</button>
+    <button>News</button>
+    <button>Press</button>
   </menu>
 
   <language>
