--- a/resources/translation/english.xml
+++ b/resources/translation/english.xml
@@ -1,8 +1,8 @@
 <names>
   <menu>
-    <button>Home</button>
-    <button>App</button>
-    <button>Modules</button>
+    <button>About</button>
+    <button>News</button>
+    <button>Press</button>
   </menu>
 
   <language>
